--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Bungee+Spice&family=Jersey+25&display=swap');
+
+.toast-success{
+    font-family: "Fahkwang", sans-serif;
+    font-style: normal;
+}
+
+
