--- a/src/styles.css
+++ b/src/styles.css
@@ -3,10 +3,27 @@
 @tailwind components;
 @tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Bungee+Spice&family=Jersey+25&display=swap');
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
+
+* {
+    padding: 10px;
+}
 
 .toast-success{
     font-family: "Fahkwang", sans-serif;
     font-style: normal;
 }
+
+.toast-error{
+    font-family: "Fahkwang", sans-serif;
+    font-style: normal;
+}
+
+.toast-warning{
+    font-family: "Fahkwang", sans-serif;
+    font-style: normal;
+}
+
+
 
 
