--- a/src/app/app-header/app-header.component.html
+++ b/src/app/app-header/app-header.component.html
@@ -1,6 +1,7 @@
 <div class="left-align">
     <div class="dropdown">
         <button class="btn bg-dark text-white dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <i class="bi bi-journal-bookmark-fill"></i>
             Pages
         </button>
         <ul class="dropdown-menu">
