--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,8 +9,8 @@
     <div class="row">
         <!-- App description -->
         <div class="col-md-6">
-            <h1>Welcome to OurApp</h1>
-            <p>OurApp is a unique platform designed to help you manage your tasks and stay organized. With our app, you can create to-do lists, set reminders, and track your progress effortlessly.</p>
+            <h1>Welcome to Cadastro Cartsys App</h1>
+            <p>Welcome to our User Management App! Here, you can seamlessly register new users, edit existing user details, and remove users with ease. Our intuitive interface ensures efficient user management for your organization. Stay secure with advanced authentication features, and experience streamlined operations with our robust platform. Start optimizing your user management today!</p>
             <p>Join thousands of users who have improved their productivity with OurApp. Register now and start your journey toward better organization and productivity.</p>
         </div>
     </div>
