organizing project and headers for jwt

--- a/src/app/components/app-footer/app-footer.component.html
+++ b/src/app/components/app-footer/app-footer.component.html
@@ -2,6 +2,6 @@
 
 <footer class="footer bg-dark text-white fixed-bottom">
     <div class="container text-center">
-        <span>© Cardastro Cartsys by Leo Ramos Andrade | 2024</span>
+        <span>© Cardastro Cartsys by Leo Ramos Andrade - 2024</span>
     </div>
 </footer>
