--- a/src/app/components/app-header/app-header.component.html
+++ b/src/app/components/app-header/app-header.component.html
@@ -1,4 +1,4 @@
-<div class="left-align">
+<div class="left-align margin-top-10">
     <div class="dropdown">
         <button class="btn bg-dark text-white dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
             <i class="bi bi-journal-bookmark-fill"></i>
@@ -6,7 +6,8 @@
         </button>
         <ul class="dropdown-menu">
             <li><button (click)="goHome()" class="dropdown-item" type="button">Home</button></li>
-            <li><button (click)="goListUsers()" class="dropdown-item" type="button">List Users</button></li>
+            <li><button (click)="goListUsers()" class="dropdown-item" type="button">Users</button></li>
+            <li><button (click)="logOut()" class="dropdown-item" type="button">Log Out</button></li>
         </ul>
     </div>
 </div>
