removido tailwind and last adjusts

--- a/src/app/pages/list-users/list-users.component.html
+++ b/src/app/pages/list-users/list-users.component.html
@@ -1,7 +1,7 @@
 <div>
     <div>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand mr-5">Filter Users</a>
+            <a class="navbar-brand ">Filter Users</a>
         </nav>
     </div>
 
@@ -47,7 +47,7 @@
     </div>
     </form>
 
-    <div class="row">
+    <div class="row" style="margin-left: 2px;margin-bottom: 50px">
         <div class="col-md-2">
             <button (click)="searchUsers(formFilters.value)"
                     type="button"
